set email for datatracker submission
Signed-off-by: steve lasker <stevenlasker@hotmail.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
     inputs:
       email:
         description: "Submitter email"
-        default: ""
+        default: "stevenlasker@hotmail.com"
         type: string
 
 jobs:
