--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
     inputs:
       email:
         description: "Submitter email"
-        default: "stevenlasker@hotmail.com"
+        default: ""
         type: string
 
 jobs:
@@ -47,7 +47,7 @@ jobs:
     - name: "Upload to Datatracker"
       uses: martinthomson/i-d-template@v1
       with:
-        make: upload "UPLOAD_EMAIL=stevenlasker@hotmail.com"
+        make: upload "UPLOAD_EMAIL=${{ inputs.email }}"
 
     - name: "Archive Submitted Drafts"
       uses: actions/upload-artifact@v3
