--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,14 +17,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: "Checkout"
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
       with:
         fetch-tags: true 
 
     # See https://github.com/actions/checkout/issues/290
-    #- name: "Get Tag Annotations"
-    #  run: |
-    #    git fetch -f origin ${{ github.ref }}:${{ github.ref }}
+    - name: "Get Tag Annotations"
+      run: |
+        git fetch -f origin ${{ github.ref }}:${{ github.ref }}
 
     - name: "Setup"
       id: setup
