ci: use upload-artefact@v4

--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -2,13 +2,13 @@ name: "Archive Issues and Pull Requests"
 
 on:
   schedule:
-    - cron: '0 0 * * 0,2,4'
+    - cron: "0 0 * * 0,2,4"
   repository_dispatch:
     types: [archive]
   workflow_dispatch:
     inputs:
       archive_full:
-        description: 'Recreate the archive from scratch'
+        description: "Recreate the archive from scratch"
         default: false
         type: boolean
 
@@ -17,26 +17,26 @@ jobs:
     name: "Archive Issues and Pull Requests"
     runs-on: ubuntu-latest
     steps:
-    - name: "Checkout"
-      uses: actions/checkout@v4
+      - name: "Checkout"
+        uses: actions/checkout@v4
 
-    # Note: No caching for this build!
+      # Note: No caching for this build!
 
-    - name: "Update Archive"
-      uses: martinthomson/i-d-template@v1
-      env:
-        ARCHIVE_FULL: ${{ inputs.archive_full }}
-      with:
-        make: archive
-        token: ${{ github.token }}
+      - name: "Update Archive"
+        uses: martinthomson/i-d-template@v1
+        env:
+          ARCHIVE_FULL: ${{ inputs.archive_full }}
+        with:
+          make: archive
+          token: ${{ github.token }}
 
-    - name: "Update GitHub Pages"
-      uses: martinthomson/i-d-template@v1
-      with:
-        make: gh-archive
-        token: ${{ github.token }}
+      - name: "Update GitHub Pages"
+        uses: martinthomson/i-d-template@v1
+        with:
+          make: gh-archive
+          token: ${{ github.token }}
 
-    - name: "Save Archive"
-      uses: actions/upload-artifact@v3
-      with:
-        path: archive.json
+      - name: "Save Archive"
+        uses: actions/upload-artifact@v4
+        with:
+          path: archive.json
